--- a/automated text animation/style.css
+++ b/automated text animation/style.css
@@ -8,6 +8,8 @@
 }
 
 body {
+    background-color: darksalmon;
+
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
@@ -17,5 +19,27 @@ body {
     
     overflow: hidden;
     margin: 0;
+}
+
+div {
+  position: absolute;
+  bottom: 40px;
+  background: rgba(0,0,0,0.1);
+  padding: 10px 20px;
+  font-size: 18px;
+}
+
+input {
+  width: 50px;
+  padding: 5px;
+  font-size: 18px;
+  background-color: darksalmon;
+  border: none;
+  text-align: center;
+
+
+}
+input:focus{
+  outline: none;
 }
 
