--- a/scroll animation/style.css
+++ b/scroll animation/style.css
@@ -8,38 +8,48 @@
 }
 
 body {
-    background-color: darksalmon;
-
+    background-color: #efedd6;
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    
-    overflow: hidden;
+
+    overflow-x: hidden;
     margin: 0;
 }
 
-div {
-  position: absolute;
-  bottom: 40px;
-  background: rgba(0,0,0,0.1);
-  padding: 10px 20px;
-  font-size: 18px;
-}
-
-input {
-  width: 50px;
-  padding: 5px;
-  font-size: 18px;
-  background-color: darksalmon;
-  border: none;
-  text-align: center;
-
+h1 {
+  margin: 10px;
 
 }
-input:focus{
-  outline: none;
+
+.box {
+  background-color: steelblue;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 200px;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
+  transform: translateX(200%);
+  transition: transform 0.4s ease;
 }
+
+.box:nth-last-of-type(even){
+  transform: translateX(-200%);
+}
+
+.box h2{
+  font-size:  45px;
+}
+
+.box.show {
+  transform: translateX(0);
+}
+
+
 
